2003-12-14  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/pygimp-image.c: use get_name for the repr instead
        of get_filename, to be more consistent.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11778 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-14  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/pygimp-image.c: use get_name for the repr instead
+	of get_filename, to be more consistent.
+
 2003-12-14  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/Lighting/Makefile.am
