2003-12-15  Michael Natterer  <mitch@gimp.org>
	* plug-ins/common/convmatrix.c (response_callback): destroy "widget",
	not "data". Fixes bug #129364.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11779 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-15  Michael Natterer  <mitch@gimp.org>
+
+	* plug-ins/common/convmatrix.c (response_callback): destroy "widget",
+	not "data". Fixes bug #129364.
+
 2003-12-14  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/pygimp-image.c: use get_name for the repr instead
