--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-15  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimphistogramview.[ch]: draw the selection in
+	GTK_STATE_SELECTED's colors, not inverted. Fixed selection
+	rendering to snap to value boundaries.
+
+2003-12-15  Michael Natterer  <mitch@gimp.org>
+
 	* plug-ins/common/convmatrix.c (response_callback): destroy "widget",
 	not "data". Fixes bug #129364.
 
