2003-12-16  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumbnail.c: added API documentation.

2003-12-16  Sven Neumann  <sven@gimp.org>

	* libgimpthumb/libgimpthumb-docs.sgml
	* libgimpthumb/libgimpthumb-sections.txt
	* libgimpthumb/tmpl/gimpthumb-enums.sgml
	* libgimpthumb/tmpl/gimpthumb-error.sgml
	* libgimpthumb/tmpl/gimpthumb-utils.sgml
	* libgimpthumb/tmpl/gimpthumbnail.sgml: completed API docs for
	libgimpthumb.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11781 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-16  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumbnail.c: added API documentation.
+
 2003-12-15  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimphistogramview.[ch]: draw the selection in
