--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-16  Danilo Šegan  <dsegan@gmx.net>
+
+	* POTFILES.in: Removed libgimp/gimpmiscui.c.
+
 2003-12-13  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
