2003-12-16  Michael Natterer  <mitch@gimp.org>
	* app/core/gimp-edit.c: added more precondition checks, minor
	cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11787 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-16  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimp-edit.c: added more precondition checks, minor
+	cleanup.
+
+2003-12-16  Michael Natterer  <mitch@gimp.org>
+
 	* tools/pdbgen/pdb/image.pdb (image_add_layer_mask)
 	* tools/pdbgen/pdb/layer.pdb (layer_add_mask): don't unref the
 	mask after adding it because the layer now takes ownership using
