2003-12-16  Sven Neumann  <sven@gimp.org>
	* app/composite/gimp-composite.c (gimp_composite_init): fixed
	gtk-doc comment.

	* plug-ins/script-fu/scripts/3d-outline.scm: use enums.

2003-12-16  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: link against libgimpthumb.

	* app/app-sections.txt: updated.

	* app/app-docs.sgml
	* libgimpbase/libgimpbase-docs.sgml
	* libgimpcolor/libgimpcolor-docs.sgml
	* libgimpmath/libgimpmath-docs.sgml
	* libgimpmodule/libgimpmodule-docs.sgml
	* libgimpthumb/libgimpthumb-docs.sgml
	* libgimpwidgets/libgimpwidgets-docs.sgml: updated XInclude
	namespace URL.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11788 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,20 @@
 2003-12-16  Sven Neumann  <sven@gimp.org>
 
+	* app/Makefile.am: link against libgimpthumb.
+
+	* app/app-sections.txt: updated.
+
+	* app/app-docs.sgml
+	* libgimpbase/libgimpbase-docs.sgml
+	* libgimpcolor/libgimpcolor-docs.sgml
+	* libgimpmath/libgimpmath-docs.sgml
+	* libgimpmodule/libgimpmodule-docs.sgml
+	* libgimpthumb/libgimpthumb-docs.sgml
+	* libgimpwidgets/libgimpwidgets-docs.sgml: updated XInclude
+	namespace URL.
+
+2003-12-14  Sven Neumann  <sven@gimp.org>
+
 	* libgimpthumb/libgimpthumb-docs.sgml
 	* libgimpthumb/libgimpthumb-sections.txt
 	* libgimpthumb/tmpl/gimpthumb-enums.sgml
