--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-16  Sven Neumann  <sven@gimp.org>
+
+	* app/composite/gimp-composite.c (gimp_composite_init): fixed
+	gtk-doc comment.
+
+	* plug-ins/script-fu/scripts/3d-outline.scm: use enums.
+
 2003-12-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimp-edit.c: added more precondition checks, minor
