2003-12-16  Michael Natterer  <mitch@gimp.org>
	* app/text/gimptextlayout-render.c (gimp_text_layout_render):
	multiply the layout's offsets with PANGO_SCALE, not -PANGO_SCALE.
	Fixes bug #129405.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11789 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/text/gimptextlayout-render.c (gimp_text_layout_render):
+	multiply the layout's offsets with PANGO_SCALE, not -PANGO_SCALE.
+	Fixes bug #129405.
+
 2003-12-16  Sven Neumann  <sven@gimp.org>
 
 	* app/composite/gimp-composite.c (gimp_composite_init): fixed
