--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-16  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpsessioninfo.c (gimp_session_info_restore): free
+	GimpSessionInfoAux structs using gimp_session_info_aux_free()
+	instead of g_free() so we don't leak its members.
+
+2003-12-16  Michael Natterer  <mitch@gimp.org>
+
 	* app/text/gimptextlayout-render.c (gimp_text_layout_render):
 	multiply the layout's offsets with PANGO_SCALE, not -PANGO_SCALE.
 	Fixes bug #129405.
