--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-16  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+	* es.po: Updated Spanish translation.
+
 2003-12-16  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation by Zdenko Podobny.
