2003-12-16  Dave Neary  <bolsh@gimp.org>
        * */Makefile.am: Fixed syntax errors in makefiles. Oops.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11793 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-16  Dave Neary  <bolsh@gimp.org>
 
+	* */Makefile.am: Fixed syntax errors in makefiles. Oops.
+
+2003-12-16  Dave Neary  <bolsh@gimp.org>
+
 	* */Makefile.am: Fixed long-standing gtk-doc 
 	problem caused by a problem with docbook-xml installations, 
 	dodgy debian packages and suspect Makefile checks which 
