2003-12-17  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpimage-contiguous-region.c: removed trailing
	whitspace.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11796 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-17  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpimage-contiguous-region.c: removed trailing
+	whitspace.
+
+2003-12-17  Michael Natterer  <mitch@gimp.org>
+
 	* app/display/gimpcanvas.c (gimp_canvas_gc_new): restore the
 	cap_style and join_style properties for the XOR GdkGC to the
 	values GimpDrawTool's GC used to have. Fixes the result of
