--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-17  Dave Neary  <bolsh@gimp.org>
+
+	* plug-ins/script-fu/script-fu-server.c: Destroy widget, not data.
+
 2003-12-17  Michael Natterer  <mitch@gimp.org>
 
 	* app/core/gimpimage-contiguous-region.c: removed trailing
