--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-18  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/tmpl/gimppatheditor.sgml
+	* libgimpwidgets/tmpl/gimpunitmenu.sgml: removed signal
+	documentation, it lives in the .c files now.
+
+	* libgimpwidgets/tmpl/gimpwidgets.sgml: updated.
+
 2003-12-16  Dave Neary  <bolsh@gimp.org>
 
 	* */Makefile.am: Fixed syntax errors in makefiles. Oops.
