--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-18  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+	
 2003-12-16  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
         * es.po: Updated Spanish translation.
