2003-12-19  Michael Natterer  <mitch@gimp.org>
	* libgimp/gimpcompat.h: added some missing #defines.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11803 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-19  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/gimpcompat.h: added some missing #defines.
+
 2003-12-18  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/gimpfileentry.c
