2003-12-19  Michael Natterer  <mitch@gimp.org>
	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpplugin.sgml
	* libgimp/tmpl/gimpproceduraldb.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11805 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-19  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpplugin.sgml
+	* libgimp/tmpl/gimpproceduraldb.sgml: updated.
+
 2003-12-18  Michael Natterer  <mitch@gimp.org>
 
 	* libgimpwidgets/tmpl/gimppatheditor.sgml
