2003-12-19  Artur Flinta  <aflinta@cvs.gnome.org>
	* pl.po: Updated Polish translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11807 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-19  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation.
+
 2003-12-16  Danilo Šegan  <dsegan@gmx.net>
 
 	* POTFILES.in: Removed libgimp/gimpmiscui.c.
