--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-19  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation.
+
 2003-12-19  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
