--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-19  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation.
+
 2003-12-08  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
