--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-19  Artur Flinta  <aflinta@cvs.gnome.org>
+
+	* pl.po: Updated Polish translation.
+
 2003-12-08  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
