--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-19  Simon Budig  <simon@gimp.org>
+
+	* app/tools/gimpvectortool.[ch]: Removed private statusbar
+	gdisplay pointer. Now help texts are only shown on the gdisp
+	of the tool. Fixes bug #128209
+
 2003-12-19  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/plug_in.pdb: renamed gimp_temp_PDB_name()
