2003-12-19  Michael Natterer  <mitch@gimp.org>
	* app/tools/gimpcroptool.c: update the crop dialog in
	crop_recalc(), not in gimp_crop_tool_draw().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11810 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-19  Michael Natterer  <mitch@gimp.org>
+
+	* app/tools/gimpcroptool.c: update the crop dialog in
+	crop_recalc(), not in gimp_crop_tool_draw().
+
 2003-12-19  Simon Budig  <simon@gimp.org>
 
 	* app/tools/gimpvectortool.[ch]: Removed private statusbar
