2003-12-19  Jakub Steiner <jimmac@ximian.com>
* data/images/gimp_logo.png: it's here! soon!


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11812 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-19  Jakub Steiner <jimmac@ximian.com>
+
+	* data/images/gimp_logo.png: it's here! soon!
+
 2003-12-19  Michael Natterer  <mitch@gimp.org>
 
 	* app/tools/gimpcroptool.c: update the crop dialog in
