2003-12-20  Sven Neumann  <sven@gimp.org>
	* app/app-docs.sgml
	* libgimpbase/libgimpbase-docs.sgml
	* libgimpcolor/libgimpcolor-docs.sgml
	* libgimpmath/libgimpmath-docs.sgml
	* libgimpmodule/libgimpmodule-docs.sgml
	* libgimpthumb/libgimpthumb-docs.sgml
	* libgimpwidgets/libgimpwidgets-docs.sgml: reverted the XInclude
	namespace update. xsltproc crashes if the new namespace URL is
	being used so we better continue to use the deprecated one until
	this is fixed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11813 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,16 @@
+2003-12-20  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* libgimpbase/libgimpbase-docs.sgml
+	* libgimpcolor/libgimpcolor-docs.sgml
+	* libgimpmath/libgimpmath-docs.sgml
+	* libgimpmodule/libgimpmodule-docs.sgml
+	* libgimpthumb/libgimpthumb-docs.sgml
+	* libgimpwidgets/libgimpwidgets-docs.sgml: reverted the XInclude
+	namespace update. xsltproc crashes if the new namespace URL is
+	being used so we better continue to use the deprecated one until
+	this is fixed.
+
 2003-12-19  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
