--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-20  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/gradient-editor-commands.c
+	(gradient_editor_replicate_response): applied patch from Shlomi Fish
+	that fixes an obvious cut'n'paste bug in the code that replicates a
+	gradient segment (bug #129738).
+
 2003-12-19  Jakub Steiner <jimmac@ximian.com>
 
 	* data/images/gimp_logo.png: it's here! soon!
