fixed Jimmac's ChangeLog entry
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11815 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@
 
 2003-12-19  Jakub Steiner <jimmac@ximian.com>
 
-	* data/images/gimp_logo.png: it's here! soon!
+	* data/images/gimp_splash.png: it's here! soon!
 
 2003-12-19  Michael Natterer  <mitch@gimp.org>
 
