2003-12-20  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdnd.[ch]: changed unused SVG dnd API to speak in
	terms of "guchar *data", "gint data_len" instead of GimpVectors.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11817 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-20  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpdnd.[ch]: changed unused SVG dnd API to speak in
+	terms of "guchar *data", "gint data_len" instead of GimpVectors.
+
+2003-12-20  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpdnd.h: sanitized DND identifiers
 	(e.g. GIMP_BRUSH -> application/x-gimp-brush-name).
 
