2003-12-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdnd.c: return a boolean indicating success from
	all drop handlers.

	(gimp_dnd_data_drop_handle): finish the drop correctly by calling
	gtk_drag_finish() with the above success value.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11820 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpdnd.c: return a boolean indicating success from
+	all drop handlers.
+
+	(gimp_dnd_data_drop_handle): finish the drop correctly by calling
+	gtk_drag_finish() with the above success value.
+
 2003-12-20  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimpxmlparser.[ch]: added gimp_xml_parser_parse_buffer().
