--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimptooldialog.c (gimp_tool_dialog_new): doc fixes.
+
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpdnd.c: return a boolean indicating success from
 	all drop handlers.
 
