2003-12-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimppreviewrendererbrush.c: removed trailing
	whitespace and #if 0'ed cruft. Cosmetics.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11822 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimppreviewrendererbrush.c: removed trailing
+	whitespace and #if 0'ed cruft. Cosmetics.
+
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimptooldialog.c (gimp_tool_dialog_new): doc fixes.
 
 2003-12-21  Michael Natterer  <mitch@gimp.org>
