--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-21  Sven Neumann  <sven@gimp.org>
+
+	* app/vectors/gimpvectors-export.[ch]: removed the GError parameter
+	from gimp_vectors_export_string() and implemented this function.
+
 2003-12-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimppreviewrendererbrush.c: removed trailing
