2003-12-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpitemtreeview.c: made "item-type" and
	"signal-name" CONSTRUCT_ONLY properties. Configure the DND dests
	in gimp_item_tree_view_constructor(), not in
	gimp_item_tree_view_new().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11824 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpitemtreeview.c: made "item-type" and
+	"signal-name" CONSTRUCT_ONLY properties. Configure the DND dests
+	in gimp_item_tree_view_constructor(), not in
+	gimp_item_tree_view_new().
+
 2003-12-21  Sven Neumann  <sven@gimp.org>
 
 	* app/vectors/gimpvectors-export.[ch]: removed the GError parameter
