2003-12-21  Dave Neary  <bolsh@gimp.org>
        * NEWS: Updated NEWS.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11825 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-21  Dave Neary  <bolsh@gimp.org>
+
+	* NEWS: Updated NEWS.
+
 2003-12-21  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimpitemtreeview.c: made "item-type" and
