--- a/NEWS
+++ b/NEWS
@@ -13,11 +13,14 @@ Overview of Changes in GIMP 1.3.24
 - Support for multipage TIFFs [Andrey Kiselev]
 - Added a channel mixer plug-in [Martin Guldahl, Yosh]
 - PDB cleanup and compatibility mode [Mitch]
+- Cleaned up libgimp API [David Odin]
 - Lots of bug fixes
 
 Other contributors:
   Adam Moss, David Neary, Jakub Steiner, Helvetix Victorinox, Pedro Gimeno,
-  Adrian Bunk, Abel Cheung, Maurits Rijk, Ville Pätsi, Marco Munari
+  Adrian Bunk, Abel Cheung, Maurits Rijk, Ville Pätsi, Marco
+  Munari, Shlomi Fish, Jakub Steiner, Simon Budig, Raphaël
+  Quinet
 
 
 Overview of Changes in GIMP 1.3.23
