2003-12-21  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpdrawable-stroke.c (gimp_drawable_stroke_boundary):
	fixed cut'n'paste bug: always use offset_x, not offset_y for x
	coordinates (spotted by Olivier Gondouin).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11826 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpdrawable-stroke.c (gimp_drawable_stroke_boundary):
+	fixed cut'n'paste bug: always use offset_x, not offset_y for x
+	coordinates (spotted by Olivier Gondouin).
+
 2003-12-21  Dave Neary  <bolsh@gimp.org>
 
 	* NEWS: Updated NEWS.
