2003-12-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpitemtreeview.c: reset container_view->dnd_widget
	in gimp_item_tree_view_constructor() instead of
	gimp_item_tree_view_new().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11828 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpitemtreeview.c: reset container_view->dnd_widget
+	in gimp_item_tree_view_constructor() instead of
+	gimp_item_tree_view_new().
+
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpcontainerview.c: this was starting to bit-rot on
 	my disk: added "container" and "context" properties.
 
