2003-12-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimphistogramview.c (gimp_histogram_view_expose):
	render the selection in "light" histograms correctly (unused and
	untested).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11829 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-12-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimphistogramview.c (gimp_histogram_view_expose):
+	render the selection in "light" histograms correctly (unused and
+	untested).
+
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpitemtreeview.c: reset container_view->dnd_widget
 	in gimp_item_tree_view_constructor() instead of
 	gimp_item_tree_view_new().
