2003-12-21  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdialogfactory.c: some cleanup while hunting
	window positioning bugs.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11830 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-12-21  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpdialogfactory.c: some cleanup while hunting
+	window positioning bugs.
+
+2003-12-21  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimphistogramview.c (gimp_histogram_view_expose):
 	render the selection in "light" histograms correctly (unused and
 	untested).
