--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,26 @@
 2003-12-22  DindinX  <david@dindinx.org>
 
+	* plug-ins/common/AlienMap.c:
+	* plug-ins/common/AlienMap2.c:
+	* plug-ins/common/CEL.c:
+	* plug-ins/common/aa.c:
+	* plug-ins/common/align_layers.c:
+	* plug-ins/common/animationplay.c:
+	* plug-ins/common/animoptimize.c:
+	* plug-ins/common/apply_lens.c:
+	* plug-ins/common/autocrop.c:
+	* plug-ins/common/blinds.c:
+	* plug-ins/common/blur.c:
+	* plug-ins/common/borderaverage.c:
+	* plug-ins/common/bumpmap.c:
+	* plug-ins/common/bz2.c:
+	* plug-ins/common/c_astretch.c:
+	* plug-ins/common/channel_mixer.c:
+	* plug-ins/common/nova.c: small cosmetic changes, such as removing
+	tabs.
+
+2003-12-22  DindinX  <david@dindinx.org>
+
 	* app/gui/user-install-dialog.c (user_install_dialog_run): added a
 	scrolled window in page 2, since the list of directories is too long
 	to fit in a 1024x768 screen.  The user install dialog should now fit
