2003-12-23  Manish Singh  <yosh@gimp.org>
        * plug-ins/pygimp/pygimp-image.c: remove add/remove_layer_mask
        methods...

        * plug-ins/pygimp/pygimp-drawable.c: ... and put them here, as methods
        of the layer object.

        * plug-ins/pygimp/plug-ins/foggify.py: update for the above new API.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11837 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-12-23  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/pygimp/pygimp-image.c: remove add/remove_layer_mask
+	methods...
+
+	* plug-ins/pygimp/pygimp-drawable.c: ... and put them here, as methods
+	of the layer object.
+
+	* plug-ins/pygimp/plug-ins/foggify.py: update for the above new API.
+
 2003-12-22  DindinX  <david@dindinx.org>
 
 	* plug-ins/common/AlienMap.c:
