--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2003-12-26  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/imagemap/imap_cern.y
+	* plug-ins/imagemap/imap_csim.y
+	* plug-ins/imagemap/imap_ncsa.y
+	* plug-ins/script-fu/script-fu-console.c 
+	* plug-ins/script-fu/script-fu-server.c: include gtk.h with angle
+	brackets, not quotes.
+
+	* plug-ins/imagemap/imap_cern_parse.[ch]
+	* plug-ins/imagemap/imap_csim_parse.[ch]
+	* plug-ins/imagemap/imap_ncsa_parse.[ch]: regenerated.
+
+	* plug-ins/imagemap/Makefile.am: added y.tab.h (created by bison)
+	to CLEANFILES.
+
 2003-12-25  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpimagefile.c (gimp_imagefile_save_thumb): return
